--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -12,7 +12,73 @@
     "failed-fetch-measurement-database": "¡No se pudo recuperar la información de medición de la base de datos!",
     "querying-database-check-know": "Consultando la base de datos para ver si ya conocemos este lugar ...",
     "no-measurements-uploaded-yet": "Aún no se han subido medidas para este lugar.",
-    "zero-measurements-place": "Cero mediciones registradas para este lugar."
+    "zero-measurements-place": "Cero mediciones registradas para este lugar.",
+    "no-place-selected-no-measurements": "Ningún lugar seleccionado, no hay medidas para mostrar. Cargando...",
+    "error-loading-device-serials": "Error al cargar los números de serie del dispositivo:",
+    "id-and-details": "ID y detalles",
+    "Device": "Dispositivo",
+    "co2-ppm": "PPM de CO2",
+    "time": "hora",
+    "crowding": "apiñamiento",
+    "danger level": "nivel de peligro",
+    "inner location": "ubicación interior",
+    "delete measurement": "eliminar medición",
+    "Unreasonably low measurement": "Medición irrazonablemente baja",
+    "Very low!": "¡Muy bajo!",
+    "Low": "Bajo",
+    "Fairly low": "Bastante bajo",
+    "Acceptable": "Aceptable",
+    "Marginal/Warning": "Marginal / Advertencia",
+    "Bad": "Malo",
+    "High: Danger zone": "Alto: zona de peligro",
+    "Extremely high: danger zone": "Extremadamente alto: zona de peligro",
+    "Immediate death or invalid measurement": "Muerte inmediata o medición inválida",
+    "upload-new-measurement": "Cargar una nueva medida para",
+    "select-model-first": "seleccione un modelo primero!",
+    "almost-there-serial": "¡Ya casi estás ahí! Ingrese número de serie:",
+    "Cancel": "Cancelar",
+    "Add new": "Añadir nuevo",
+    "enter-serial-number": "Ingrese el número de serie de su",
+    "not-logged-in-or-error": "No iniciado sesión o error:",
+    "add-devices-view-stats": "Agregue sus dispositivos y vea estadísticas",
+    "add-manufacturer": "Agregar un fabricante a la base de datos",
+    "Manufacturer name": "Nombre del Fabricante",
+    "Submit new manufacturer": "Enviar nuevo fabricante",
+    "Create new manufacturer": "Crear nuevo fabricante",
+    "Model ID": "ID de modelo",
+    "Device model name": "Nombre del modelo del dispositivo",
+    "Instances": "Instancias",
+    "pick it!": "¡recogerlo!",
+    "Selected a model!": "¡Seleccioné un modelo!",
+    "Unselect": "Deseleccionar",
+    "create-new-model-manufacturer": "Crear nuevo modelo para el fabricante",
+    "Selected device:": "Dispositivo seleccionado:",
+    "select-manufacturer-first": "¡Primero seleccione un fabricante!",
+    "Model name": "Nombre del modelo",
+    "Submit new model": "Enviar nuevo modelo",
+    "add-model": "Agregar un modelo a la base de datos",
+    "model name:": "nombre del modelo:",
+    "made by:": "hecho por:",
+    "total-models-in-database": "total de dispositivos de ese modelo en la base de datos:",
+    "total-modelmeasurement": "medidas totales por dispositivos de ese modelo:",
+    "Add a measurement for": "Agregar una medida para",
+    "not-logged-in-please": "No ha iniciado sesión. Inicie sesión.",
+    "Create new device": "Crear nuevo dispositivo",
+    "Where inside": "¿Dónde adentro?",
+    "did you take the measurement?": "¿tomaste la medida?",
+    "low-measurement-message": "Esa es una medición baja. Confirme que su medidor lea cerca de 400ppm cuando esté afuera y lejos de fuentes de CO2",
+    "high-measurement-message": "¡Esa es una medida muy alta! Confirme que su medidor lea cerca de 400 ppm cuando esté afuera y lejos de fuentes de CO2.",
+    "co2-level": "Nivel de CO2 (ppm)",
+    "Measurement time": "Tiempo de medición",
+    "Now": "Ahora",
+    "Other Date/Time": "Otra fecha / hora",
+    "crowding-level": "Hacinamiento 1-5 (1 está vacío, 5 lleno)",
+    "New sublocation": "Nueva sublocalización",
+    "Submit new measurement": "Enviar nueva medición",
+    "Device ID": "ID del dispositivo",
+    "Serial #": "Número de serie",
+    "Device model": "Modelo de dispositivo",
+    "Device manufacturer": "Fabricante del dispositivo"
 
 }
 
