--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -10,5 +10,72 @@
     "last-query-status": "Last google places query status: ",
     "failed-fetch-measurement-database": "Failed to fetch measurement info from the database!",
     "querying-database-check-know": "Querying database to see if we already know about this place...",
-    "no-measurements-uploaded-yet": "No measurements uploaded for this place yet."
+    "no-measurements-uploaded-yet": "No measurements uploaded for this place yet.",
+    "zero-measurements-place": "Zero measurements recorded for this place.",
+    "no-place-selected-no-measurements": "No place selected, no measurements to show. Loading...",
+    "error-loading-device-serials": "Error while loading device serial numbers: ",
+    "id-and-details": "ID and Details",
+    "Device": "Device",
+    "co2-ppm": "CO2 PPM",
+    "time": "time",
+    "crowding": "crowding",
+    "danger level": "danger level",
+    "inner location": "inner location",
+    "delete measurement": "delete measurement",
+    "Unreasonably low measurement": "Unreasonably low measurement",
+    "Very low!": "Very low!",
+    "Low": "Low",
+    "Fairly low": "Fairly low",
+    "Acceptable": "Acceptable",
+    "Marginal/Warning": "Marginal/Warning",
+    "Bad": "Bad",
+    "High: Danger zone": "High: Danger zone",
+    "Extremely high: danger zone": "Extremely high: danger zone",
+    "Immediate death or invalid measurement": "Immediate death or invalid measurement",
+    "upload-new-measurement": "Upload a new measurement for ",
+    "select-model-first": "select a model first!",
+    "almost-there-serial": "You're almost there! Enter serial number:",
+    "Cancel": "Cancel",
+    "Add new": "Add new",
+    "enter-serial-number": "Enter serial number of your",
+    "not-logged-in-or-error": "Not logged in, or error:",
+    "add-devices-view-stats": "Add your devices and view stats",
+    "add-manufacturer": "Add a manufacturer to the database",
+    "Manufacturer name": "Manufacturer name",
+    "Submit new manufacturer": "Submit new manufacturer",
+    "Create new manufacturer": "Create new manufacturer",
+    "Model ID": "Model ID",
+    "Device model name": "Device model name",
+    "Instances": "Instances",
+    "pick it!": "pick it!",
+    "Selected a model!": "Selected a model!",
+    "Unselect": "Unselect",
+    "create-new-model-manufacturer": "Create new model for manufacturer",
+    "Selected device:": "Selected device:",
+    "select-manufacturer-first": "Select a manufacturer first!",
+    "Model name": "Model name",
+    "Submit new model": "Submit new model",
+    "add-model": "Add a model to the database",
+    "model name:": "model name:",
+    "made by:": "made by:",
+    "total-models-in-database": "total devices of that model in database:",
+    "total-modelmeasurement": "total measurements by devices of that model:",
+    "Add a measurement for": "Add a measurement for",
+    "not-logged-in-please": "Not logged in. Please log in.",
+    "Create new device": "Create new device",
+    "Where inside": "Where inside",
+    "did you take the measurement?": "did you take the measurement?",
+    "low-measurement-message": "That's a low measurement. Confirm that your meter reads near 400ppm when you're outside and away from sources of CO2.",
+    "high-measurement-message": "That's a very high measurement! Confirm that your meter reads near 400ppm when you're outside and away from sources of CO2.",
+    "co2-level": "CO2 level (ppm)",
+    "Measurement time": "Measurement time",
+    "Now": "Now",
+    "Other Date/Time": "Other Date/Time",
+    "crowding-level": "Crowding 1-5 (1 is empty, 5 full)",
+    "New sublocation": "New sublocation",
+    "Submit new measurement": "Submit new measurement",
+    "Device ID": "Device ID",
+    "Serial #": "Serial #",
+    "Device model": "Device model",
+    "Device manufacturer": "Device manufacturer"
 }
