done with first pass

--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -77,5 +77,11 @@
     "Device ID": "Device ID",
     "Serial #": "Serial #",
     "Device model": "Device model",
-    "Device manufacturer": "Device manufacturer"
+    "Device manufacturer": "Device manufacturer",
+    "measurement-by-device": "Measurement taken by device #",
+    "Measurement taken by": "Measurement taken by",
+    "Recorded CO2": "Recorded CO2",
+    "Measurement taken date and time": "Measurement taken date and time",
+    "Measurement created in database time": "Measurement created in database time",
+    "Measurement last updated in database": "Measurement last updated in database"
 }
