Translation fixes by Miguel Ángel Campano
Thanks, Miguel Ángel Campano (@MA_Campano)!

--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -5,7 +5,7 @@
     "Models": "Modelos",
     "Places": "Lugares",
     "sponsor": "patrocinador",
-    "welcome-header": "Bienvenido al COVID CO2 Tracker",
+    "welcome-header": "Bienvenido a COVID CO2 Tracker",
     "Instruction video": "Video de instrucción",
     "find-me": "¡Encuentrame!",
     "last-query-status": "Último estado de consulta de Google Places:",
@@ -19,7 +19,7 @@
     "Device": "Dispositivo",
     "co2-ppm": "PPM de CO2",
     "time": "hora",
-    "crowding": "apiñamiento",
+    "crowding": "densidad de ocupación",
     "danger level": "nivel de peligro",
     "inner location": "ubicación interior",
     "delete measurement": "eliminar medición",
@@ -33,7 +33,7 @@
     "High: Danger zone": "Alto: zona de peligro",
     "Extremely high: danger zone": "Extremadamente alto: zona de peligro",
     "Immediate death or invalid measurement": "Muerte inmediata o medición inválida",
-    "upload-new-measurement": "Cargar una nueva medida para",
+    "upload-new-measurement": "Subir una nueva medida",
     "select-model-first": "seleccione un modelo primero!",
     "almost-there-serial": "¡Ya casi estás ahí! Ingrese número de serie:",
     "Cancel": "Cancelar",
