tweak spanish translation
Advice from Martis / @lagartijadeagua.

--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -4,7 +4,7 @@
     "Devices": "Dispositivos",
     "Models": "Modelos",
     "Places": "Lugares",
-    "sponsor": "patrocinador",
+    "sponsor": "crowdfunding",
     "welcome-header": "Bienvenido a COVID CO2 Tracker",
     "Instruction video": "Video de instrucción",
     "find-me": "¡Encuentrame!",
