--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -84,6 +84,7 @@
     "Recorded CO2": "CO2 registrado",
     "Measurement taken date and time": "Fecha y hora tomadas de la medición",
     "Measurement created in database time": "Medida creada en el tiempo de la base de datos",
-    "Measurement last updated in database": "Medida actualizada por última vez en la base de datos"
+    "Measurement last updated in database": "Medida actualizada por última vez en la base de datos",
+    "rebreathed fraction": "fracción reinspirada"
 }
 
