--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -1,6 +1,5 @@
 {
-
-    "Home" : "Casa",
+    "Home": "Casa",
     "Devices": "Dispositivos",
     "Models": "Modelos",
     "Places": "Lugares",
@@ -85,6 +84,6 @@
     "Measurement taken date and time": "Fecha y hora tomadas de la medición",
     "Measurement created in database time": "Medida creada en el tiempo de la base de datos",
     "Measurement last updated in database": "Medida actualizada por última vez en la base de datos",
-    "rebreathed fraction": "fracción reinspirada"
+    "rebreathed fraction": "fracción reinspirada",
+    "error-loading-app-stats": "error al cargar las estadísticas de la aplicación"
 }
-
