Fix translations and stuff
Thanks https://twitter.com/MA_Campano

--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -91,6 +91,6 @@
     "total-devices": "Total de dispositivos",
     "total-manufacturers": "Fabricantes totales",
     "total-models": "Modelos totales",
-    "total-places": "Plazas totales",
+    "total-places": "localizaciones totales",
     "total-sublocations": "Total de sublocalizaciones"
 }
