Disable submit button while submitting new measurement. Show spinner.

--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -93,5 +93,6 @@
     "total-models": "Total models",
     "total-places": "Total places",
     "total-sublocations": "Total sublocations",
-    "loading-user-devices": "Loading your devices..."
+    "loading-user-devices": "Loading your devices...",
+    "submitting-measurement": "Submitting measurement..."
 }
