add about details!

--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -97,5 +97,6 @@
     "submitting-measurement": "Submitting measurement...",
     "creating-device": "Creating device...",
     "creating-model": "Creating model...",
-    "creating-manufacturer": "Creating manufacturer..."
+    "creating-manufacturer": "Creating manufacturer...",
+    "more-info": "More"
 }
