--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -97,5 +97,6 @@
     "submitting-measurement": "Enviando medición...",
     "creating-device": "Creando dispositivo...",
     "creating-model": "Creando modelo...",
-    "creating-manufacturer": "Creando fabricante..."
+    "creating-manufacturer": "Creando fabricante...",
+    "more-info": "Más"
 }
