--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -98,5 +98,6 @@
     "creating-device": "Creando dispositivo...",
     "creating-model": "Creando modelo...",
     "creating-manufacturer": "Creando fabricante...",
-    "more-info": "Más"
+    "more-info": "Más",
+    "locality-selected-warning": "¿Está seguro de que desea seleccionar una ciudad o pueblo como su lugar? ¡Prueba a buscar establecimientos por su nombre!"
 }
