--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -99,5 +99,6 @@
     "creating-model": "Creating model...",
     "creating-manufacturer": "Creating manufacturer...",
     "more-info": "More",
-    "locality-selected-warning": "Are you sure you want to select a city or town as your place? Try looking for establishments by name!"
+    "locality-selected-warning": "Are you sure you want to select a city or town as your place? Try looking for establishments by name!",
+    "aranet4-serial-info": "The Aranet4 serial number is a 12 digit number behind the AA batteries, in the battery compartment. You can also find it in the Aranet4 app after pairing your device, by clicking the gear icon."
 }
