--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -100,7 +100,7 @@
     "creating-manufacturer": "Creando fabricante...",
     "more-info": "Más",
     "locality-selected-warning": "¿Está seguro de que desea seleccionar una ciudad o pueblo como su lugar? ¡Prueba a buscar establecimientos por su nombre!",
-    "aranet4-serial-info": "El número de serie de Aranet4 es un número de 12 dígitos detrás de las pilas AA, en el compartimento de las pilas. También puede encontrarlo en la aplicación Aranet4 después de emparejar su dispositivo, haciendo clic en el ícono de ajustes.",
+    "aranet4-serial-info": "El número de serie de Aranet4 es un número de 12 dígitos detrás de las pilas AA, en el compartimento de las pilas. Los números de serie comunes comienzan con '38', '37' o '31'. También puedes encontrarlo en la aplicación Aranet4 después de emparejar tu dispositivo, haciendo clic en el ícono de ajustes.",
     "set-as-default-place-for-realtime-upload-client": "Elija el lugar para la carga en tiempo real",
     "select-sublocation-to-set-as-default-for-realtime-upload": "¡Elija una sububicación primero para cargar en tiempo real!"
 }
