--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -14,9 +14,8 @@
     "zero-measurements-place": "Zero measurements recorded for this place.",
     "no-place-selected-no-measurements": "No place selected, no measurements to show. Loading...",
     "error-loading-device-serials": "Error while loading device serial numbers: ",
-    "id-and-details": "ID and Details",
+    "id-and-details": "Details",
     "Device": "Device",
-    "co2-ppm": "CO2 PPM",
     "time": "time",
     "crowding": "crowding",
     "danger level": "danger level",
@@ -84,7 +83,7 @@
     "Measurement taken date and time": "Measurement taken date and time",
     "Measurement created in database time": "Measurement created in database time",
     "Measurement last updated in database": "Measurement last updated in database",
-    "rebreathed fraction": "rebreathed fraction",
+    "rebreathed fraction": "rebreathed %",
     "error-loading-app-stats": "Error loading app stats",
     "total-users": "Total users",
     "total-measurements": "Total measurements",
