--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -14,9 +14,8 @@
     "zero-measurements-place": "Cero mediciones registradas para este lugar.",
     "no-place-selected-no-measurements": "Ningún lugar seleccionado, no hay medidas para mostrar. Cargando...",
     "error-loading-device-serials": "Error al cargar los números de serie del dispositivo:",
-    "id-and-details": "ID y detalles",
+    "id-and-details": "detalles",
     "Device": "Dispositivo",
-    "co2-ppm": "PPM de CO2",
     "time": "hora",
     "crowding": "densidad de ocupación",
     "danger level": "nivel de peligro",
@@ -84,7 +83,7 @@
     "Measurement taken date and time": "Fecha y hora tomadas de la medición",
     "Measurement created in database time": "Medida creada en el tiempo de la base de datos",
     "Measurement last updated in database": "Medida actualizada por última vez en la base de datos",
-    "rebreathed fraction": "fracción reinspirada",
+    "rebreathed fraction": "% reinspirada",
     "error-loading-app-stats": "error al cargar las estadísticas de la aplicación",
     "total-users": "Total de usuarios",
     "total-measurements": "Medidas totales",
