--- a/co2_client/public/locales/fr/translation.json
+++ b/co2_client/public/locales/fr/translation.json
@@ -14,9 +14,8 @@
     "zero-measurements-place": "Zéro mesures enregistrées pour cet endroit.",
     "no-place-selected-no-measurements": "Aucun endroit sélectionné, aucune mesure à afficher. Chargement...",
     "error-loading-device-serials": "Erreur lors du chargement des numéros de série de l'appareil :",
-    "id-and-details": "ID et détails",
+    "id-and-details": "détails",
     "Device": "Appareil",
-    "co2-ppm": "CO2 PPM",
     "time": "temps",
     "crowding": "surpeuplement",
     "danger level": "niveau de danger",
@@ -84,7 +83,7 @@
     "Measurement taken date and time": "Date et heure de la mesure",
     "Measurement created in database time": "Mesure créée dans le temps de la base de données",
     "Measurement last updated in database": "Mesure mise à jour pour la dernière fois dans la base de données",
-    "rebreathed fraction": "fraction réinspirée",
+    "rebreathed fraction": "% réinspirée",
     "error-loading-app-stats": "Erreur lors du chargement des statistiques de l'application",
     "total-users": "Nombre total d'utilisateurs",
     "total-measurements": "Mesures totales",
