shorten 800-1000ppm co2 risk description

--- a/co2_client/public/locales/es/translation.json
+++ b/co2_client/public/locales/es/translation.json
@@ -26,7 +26,7 @@
     "Low": "Bajo",
     "Fairly low": "Bastante bajo",
     "Acceptable": "Aceptable",
-    "Marginal/Warning": "Marginal / Advertencia",
+    "Marginal/Warning": "Marginal",
     "Bad": "Malo",
     "High: Danger zone": "Alto: zona de peligro",
     "Extremely high: danger zone": "Extremadamente alto: zona de peligro",
