--- a/co2_client/public/locales/fr/translation.json
+++ b/co2_client/public/locales/fr/translation.json
@@ -26,7 +26,7 @@
     "Low": "Meugler",
     "Fairly low": "Plutot bas",
     "Acceptable": "Acceptable",
-    "Marginal/Warning": "Marginal/Avertissement",
+    "Marginal/Warning": "Marginal",
     "Bad": "Mal",
     "High: Danger zone": "Élevé : zone de danger",
     "Extremely high: danger zone": "Extrêmement élevé : zone de danger",
