--- a/co2_client/public/locales/en/translation.json
+++ b/co2_client/public/locales/en/translation.json
@@ -26,7 +26,7 @@
     "Low": "Low",
     "Fairly low": "Fairly low",
     "Acceptable": "Acceptable",
-    "Marginal/Warning": "Marginal/Warning",
+    "Marginal/Warning": "Marginal",
     "Bad": "Bad",
     "High: Danger zone": "High: Danger zone",
     "Extremely high: danger zone": "Extremely high: danger zone",
